--- a/TeamSurveyProject/src/app/+home/home.component.html
+++ b/TeamSurveyProject/src/app/+home/home.component.html
@@ -1,44 +1,19 @@
 <h1>Welcome to Team Evaluations!</h1>
 
-<!-- <app-team-display-card></app-team-display-card> -->
-
-<!-- videos to help: sign in page, retrieving passwords -->
-<mat-card class="example-card">
-  <mat-card-title>
-    ABC
-  </mat-card-title>
-  <mat-card-subtitle>CMS 484</mat-card-subtitle>
-  <mat-card-content>
-    <p>You have 1 out of 5 surveys complete.</p>
-    <button>Begin Surveys</button>
-  </mat-card-content>
-  <mat-card-actions>
-  </mat-card-actions>
-</mat-card>
-
-<mat-card class="example-card">
-  <mat-card-title>
-    Team Rocks
-  </mat-card-title>
-  <mat-card-subtitle>CMS 495</mat-card-subtitle>
-  <mat-card-content>
-    <p>You have 3 out of 5 surveys complete.</p>
-    <button>Begin Surveys</button>
-  </mat-card-content>
-  <mat-card-actions>
-
-  </mat-card-actions>
-</mat-card>
-
-<mat-card class="example-card">
-  <mat-card-title>
-    Team Bo
-  </mat-card-title>
-  <mat-card-subtitle>CMS 330</mat-card-subtitle>
-  <mat-card-content>
-    <p>You have no active surveys.</p>
-  </mat-card-content>
-  <mat-card-actions>
-
-  </mat-card-actions>
-</mat-card>
+<ng-container *ngFor='let team of teams'>
+  <mat-card class='teamTemplate'>
+    <mat-card-title>{{ team.Name }}</mat-card-title>
+    <mat-card-subtitle>{{ team.Course }}</mat-card-subtitle>
+    <mat-card-content>
+      <p>You have {{ team.SurveysComplete }} out of {{ team.SurveysTotal }} surveys complete.</p>
+      <select>
+        <option *ngFor="let survey of team.Surveys; let index=index;" [value]="index">
+          {{ survey.For }}
+        </option>
+      </select>
+      <button>Begin Survey</button>
+    </mat-card-content>
+    <mat-card-actions>
+    </mat-card-actions>
+  </mat-card>
+</ng-container>
