removed completed surveys from create team

--- a/TeamSurveyProject/src/app/+createteam/createteam.component.html
+++ b/TeamSurveyProject/src/app/+createteam/createteam.component.html
@@ -25,7 +25,7 @@
       <div>{{ teams[index].Name }}</div>
       <div>{{ teams[index].Course }}</div>
       <div>{{ teams[index].Semester }}</div>
-      <div>Completed {{ teams[index].SurveysComplete }} of {{ teams[index].SurveysTotal }}</div>
+      <!-- <div>Completed {{ teams[index].SurveysComplete }} of {{ teams[index].SurveysTotal }}</div> -->
     </div>
   </mat-card>
 </ng-container>
