--- a/TeamSurveyProject/src/app/+home/home.component.scss
+++ b/TeamSurveyProject/src/app/+home/home.component.scss
@@ -1,8 +1,7 @@
-// .example-card {
-//     max-width: 400px;
-//   }
-  
-//   .example-header-image {
-//     //background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-//     background-size: cover;
-//   }
+
+.teamTemplate {
+    width: fit-content;
+    font-size: 1.2vmax;
+    text-align: center;
+    margin-bottom: 1vmax;
+}
