--- a/TeamSurveyProject/src/app/+signin/signin.component.html
+++ b/TeamSurveyProject/src/app/+signin/signin.component.html
@@ -1,42 +1,14 @@
-<!-- <form #passwordForm="ngForm" fxLayout="column" (ngSubmit)="sendSigninLink()">
-  <mat-card>
-    <mat-card-title>
-      <h2>Create new Account</h2>
-    </mat-card-title>
-    <mat-card-content fxLayout="column" fxLayoutAlign="none center">
-      <mat-input-container>
-        <input matInput required placeholder="Email" name="email" [(ngModel)]="email">
-      </mat-input-container>
-      <button mat-raised-button [disabled]="!passwordForm.form.valid" type='submit'>Send Link</button>
-      <p>Enter your email and click send link to create a new account.</p>
-    </mat-card-content>
-  </mat-card>
-</form> -->
-
-<ng-container *ngIf="user | async; else login">
-
-  <div class="notification is-success">
-    You are now logged in. Redirecting to home page...
+<div class='loginBoxContainer'>
+    <div class="login-box">
+      <h1>Login Here</h1>
+      <p>Username</p>
+      <input type="text" name="username" placeholder="Enter Username" />
+      <p>Password</p>
+      <input type="password" name="password" placeholder="Enter password" />
+      <div>
+        <button mat-button type="button" [routerLink]="['/createteam']"> Login </button>
+        <button mat-button type="button"> Forgot Password </button>
+        <button mat-button type="button" [routerLink]="['/login']"> Create Instructor Account </button>
+      </div>
+    </div>
   </div>
-
-</ng-container>
-
-<ng-template #login>
-  <label for="email" class="label">Passwordless Auth</label><br>
-  <input type="email" class="input" [(ngModel)]="email">
-
-  <hr>
-
-  <button class="button is-primary" [disabled]="emailSent" (click)="sendSigninLink(email)">Get Login Link</button>
-
-  <hr>
-
-  <div *ngIf="emailSent" class="notification is-info">
-    Email link sent!
-  </div>
-
-  <div *ngIf="errorMessage" class="notification is-danger">
-    {{ errorMessage }}
-  </div>
-
-</ng-template>
