--- a/TeamSurveyProject/src/app/+signin/signin.component.scss
+++ b/TeamSurveyProject/src/app/+signin/signin.component.scss
@@ -1,29 +1,37 @@
-$horz-padding: 30px;
+.loginBoxContainer {
+    text-align: center;
+    margin-top: 20px;
+}
 
-mat-card {
+.login-box{
+    margin: auto;
+    text-align: center;
+    width: 320px;
+    height: 420px;
+    background: rgba(0, 0, 0, 0.5);
+    color:#fff;
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+.login-box p{
+    margin: 0;
     padding: 0;
+    font-weight: bold;
+}
+.login-box input{
+    width: 100%;
+    margin-bottom: 20px;
+    border:none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height:40px;
+    color: #fff;
+    font-size: 16px;
+}
 
-    mat-card-title {
-        background-color: #089889;
-        padding: 15px $horz-padding;
-        margin: 0;
-        h2 {
-            margin: 0;
-            color: white;
-            font-weight: normal;
-        }
-    }
-
-    mat-card-content {
-        padding: $horz-padding;
-        color: rgba(0, 0, 0, 0.7);
-        font-size: 18px;
-        button {
-            background-color: #800000;
-            color: white;
-            font-size: 18px;
-            margin: 20px;
-            padding: 5px 20px;
-        }
-    }
+.login-box a{
+    text-decoration: none;
+    font-size: 14px;
+    color: #fff;
 }
